[gd_scene load_steps=7 format=3 uid="uid://v74l8i6gpmfc"]

[ext_resource type="Texture2D" uid="uid://p3qtvxt1p3ko" path="res://Art/HUD Icons/meat.png" id="1_64w33"]
[ext_resource type="Script" path="res://Scripts/HUD/main_hud.gd" id="1_m2r5h"]
[ext_resource type="FontFile" uid="uid://l348hsha7jl0" path="res://Fonts/PixeloidSansBold-PKnYd.ttf" id="2_26ql1"]
[ext_resource type="Texture2D" uid="uid://bl0jyom55ooj1" path="res://Art/HUD Icons/Skin.png" id="3_iq8rr"]
[ext_resource type="Texture2D" uid="uid://bnr4cmahk2e2w" path="res://Art/HUD Icons/boner.png" id="4_wmk1n"]
[ext_resource type="Texture2D" uid="uid://cqiyhj5yl0rqa" path="res://Art/HUD Icons/Tower.png" id="6_lne5b"]

[node name="MainHud" type="CanvasLayer"]
script = ExtResource("1_m2r5h")

[node name="MeatIcon" type="TextureRect" parent="."]
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("1_64w33")
stretch_mode = 3

[node name="Meat" type="Label" parent="MeatIcon"]
layout_mode = 0
offset_left = 25.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = 30.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_26ql1")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkinIcon" type="TextureRect" parent="."]
offset_left = 80.0
offset_right = 112.0
offset_bottom = 32.0
texture = ExtResource("3_iq8rr")

[node name="Skin" type="Label" parent="SkinIcon"]
layout_mode = 0
offset_left = 25.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = 30.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_26ql1")
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoneIcon" type="TextureRect" parent="."]
offset_left = 160.0
offset_right = 192.0
offset_bottom = 32.0
texture = ExtResource("4_wmk1n")

[node name="Bones" type="Label" parent="BoneIcon"]
layout_mode = 0
offset_left = 25.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = 30.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_26ql1")
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node" type="Node" parent="."]

[node name="Hotbar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -64.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0

[node name="TowerPlaceBtn" type="TextureButton" parent="Hotbar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -32.0
offset_right = 16.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_lne5b")
stretch_mode = 0

[node name="TurretPlaceBtn" type="TextureButton" parent="Hotbar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -32.0
offset_right = 80.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
